[package]
name = "pred-recdec"
version = "0.1.0"
edition = "2024"

[dependencies]
mimalloc = "0.1.48"
pcre2 = "0.2.11"
regex = "1.12.2"
rustc-hash = "2.1.1"

[lints.clippy]
all = "allow"
complexity = "warn"
perf = "warn"
suspicious = "warn"
correctness = "deny"

[profile.release]
opt-level = 3
debug = true
#lto = "fat"

[features]
parse_trace = []

[dev-dependencies]
serde_json = "1.0.149"
simd-json = "0.17.0"
