[package]
name = "pred-recdec"
version = "0.1.0"
edition = "2024"
authors = ["<wareya@gmail.com>"]


[lib]
name = "pred_recdec"
path = "src/lib.rs"

[[bin]]
name = "pred_recdec"
path = "src/main.rs"


[dependencies]
mimalloc = "0.1.48"
regex = "=1.8" # much faster than any other version series
rustc-hash = "2.1.1"

[lints.clippy]
all = "allow"
complexity = "warn"
perf = "warn"
suspicious = "warn"
correctness = "deny"

[profile.release]
opt-level = 3
debug = true
#lto = "fat"

[features]
parse_trace = []

[dev-dependencies]
serde_json = "1.0.149"
simd-json = "0.17.0"
