[package]
name = "pred-recdec"
version = "0.2.0"
edition = "2024"
authors = ["<wareya@gmail.com>"]
license = "MIT OR Apache-2.0 OR CC0-1.0 OR 0BSD"
keywords = ["parsing", "parser"]
repository = "https://github.com/wareya/pred_recdec/"
categories = ["parsing"]
description = "Predicated Recursive Descent Parsing with BNF and impure hooks"
include = ["/src"]


[lib]
name = "pred_recdec"
path = "src/lib.rs"

[[bin]]
name = "pred_recdec"
path = "src/main.rs"
test = false

[[bin]]
name = "c_parser_test"
path = "src/c.rs"
test = false

[dependencies]
mimalloc = "0.1.48"
regex = "=1.8" # much faster than any other version series
rustc-hash = "2.1.1"

[lints.clippy]
all = "allow"
complexity = "warn"
perf = "warn"
suspicious = "warn"
correctness = "deny"

[profile.release]
opt-level = 3
debug = true
#lto = "fat"

[features]
parse_trace = []

[dev-dependencies]
serde_json = "1.0.149"
simd-json = "0.17.0"
